--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ stages:
     displayName: 'Deploy job'
     pool:
       vmImage: 'ubuntu-16.04'
+      environment: spike
       variables:
       - group: Release
       Steps:
