--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ stages:
     displayName: 'Build job'
     pool:
       vmImage: 'ubuntu-16.04'
+      environment: spike
     steps:
     - task: Docker@2
       displayName: 'Build and push the image to container registry'
