--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ stages:
     displayName: 'Build job'
     pool:
       vmImage: 'ubuntu-16.04'
-      environment: spike
+      
     steps:
     - task: Docker@2
       displayName: 'Build and push the image to container registry'
@@ -29,6 +29,7 @@ stages:
   displayName: 'Deploy the container'
   dependsOn: Build
   jobs:  
+  - job: 'Deploy'
   - deployment: 'Deploy'
     displayName: 'Deploy job'
     pool:
