--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,20 +25,21 @@ stages:
         containerRegistry: 'Container Registry Connection'
         tags: |
           $(tag)
+
 - stage: 'Deploy'
   displayName: 'Deploy the container'
   dependsOn: Build
-  jobs:  
-  - deployment: 'Deploy'
+  jobs:
+  - job: 'Deploy'
     displayName: 'Deploy job'
     pool:
       vmImage: 'ubuntu-16.04'
       environment: spike
-      variables:
-      - group: Release
-      Steps:
-      - task: AzureWebAppContainer@1
-        inputs:
-         appName: $(WebAppName)
-         azureSubscription: 'Resource Manager - Tailspin - Space Game'
-         imageName: $(RegistryName)/$(webRepository):$(build.buildId)
+    variables:
+    - group: Release
+    steps:
+    - task: AzureWebAppContainer@1
+      inputs:
+       appName: $(WebAppName)
+       azureSubscription: 'Resource Manager - Tailspin - Space Game'
+       imageName: $(RegistryName)/$(webRepository):$(build.buildId)
